[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/Classic-Font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Components/ComponentsScripts/MenuPause.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="MenuPause" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.423529 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 378.0
margin_top = 206.0
margin_right = 646.0
margin_bottom = 394.0
rect_pivot_offset = Vector2( -522, -132 )
custom_constants/separation = 8

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 268.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
text = "Pausado"
align = 1

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 268.0
margin_bottom = 38.0
rect_min_size = Vector2( 0, 10 )

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 46.0
margin_right = 268.0
margin_bottom = 68.0
rect_pivot_offset = Vector2( -634, -73 )
custom_fonts/font = SubResource( 2 )
text = "Voltar ao jogo"

[node name="Button1" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 268.0
margin_bottom = 98.0
rect_pivot_offset = Vector2( -634, -73 )
custom_fonts/font = SubResource( 2 )
text = "Reiniciar Level"

[node name="Button2" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 106.0
margin_right = 268.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( -634, -73 )
custom_fonts/font = SubResource( 2 )
text = "Seleção de fases"

[node name="Button3" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 136.0
margin_right = 268.0
margin_bottom = 158.0
rect_pivot_offset = Vector2( -634, -73 )
custom_fonts/font = SubResource( 2 )
text = "Menu Inicial"

[node name="Button4" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 166.0
margin_right = 268.0
margin_bottom = 188.0
rect_pivot_offset = Vector2( -634, -73 )
custom_fonts/font = SubResource( 2 )
text = "Sair do jogo"

[connection signal="pressed" from="CenterContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button4" to="." method="_on_Button4_pressed"]
